{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 142,
  "lineage": "83348636-f94b-4ff6-7ea8-b392d5d20761",
  "resources": [
    {
      "module": "module.vpc_basenetwork",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgwip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002148e1c3f7cea17",
            "domain": "vpc",
            "id": "eipalloc-002148e1c3f7cea17",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-4-52-235.compute-1.amazonaws.com",
            "public_ip": "52.4.52.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ElasticIP": "true",
              "Name": "NatGWIP-1",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "tags_all": {
              "ElasticIP": "true",
              "Name": "NatGWIP-1",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc_basenetwork.aws_internet_gateway.main_igw",
            "module.vpc_basenetwork.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5abd1c7ae3776ed",
            "domain": "vpc",
            "id": "eipalloc-0a5abd1c7ae3776ed",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-230-137-58.compute-1.amazonaws.com",
            "public_ip": "3.230.137.58",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ElasticIP": "true",
              "Name": "NatGWIP-2",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "tags_all": {
              "ElasticIP": "true",
              "Name": "NatGWIP-2",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc_basenetwork.aws_internet_gateway.main_igw",
            "module.vpc_basenetwork.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_basenetwork",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:internet-gateway/igw-0a2641caf78696019",
            "id": "igw-0a2641caf78696019",
            "owner_id": "904546716712",
            "tags": {
              "Name": "myIG",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "myIG",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "vpc_id": "vpc-073172b04af6e53fc"
          },
          "dependencies": [
            "module.vpc_basenetwork.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_basenetwork",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002148e1c3f7cea17",
            "connectivity_type": "public",
            "id": "nat-0b793ab4d73de84ca",
            "network_interface_id": "eni-03922de35c697e797",
            "private_ip": "172.16.1.107",
            "public_ip": "52.4.52.235",
            "subnet_id": "subnet-03da9dccfa8b731f8",
            "tags": {
              "Name": "NatGW-1",
              "NatGW": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "NatGW-1",
              "NatGW": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc_basenetwork.aws_eip.natgwip",
            "module.vpc_basenetwork.aws_internet_gateway.main_igw",
            "module.vpc_basenetwork.aws_subnet.subnet_public",
            "module.vpc_basenetwork.aws_vpc.main_vpc",
            "module.vpc_basenetwork.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5abd1c7ae3776ed",
            "connectivity_type": "public",
            "id": "nat-021620abe1ea527d2",
            "network_interface_id": "eni-0fdbedcf471169ecb",
            "private_ip": "172.16.2.53",
            "public_ip": "3.230.137.58",
            "subnet_id": "subnet-0424f7f8b25bb6e41",
            "tags": {
              "Name": "NatGW-2",
              "NatGW": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "NatGW-2",
              "NatGW": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc_basenetwork.aws_eip.natgwip",
            "module.vpc_basenetwork.aws_internet_gateway.main_igw",
            "module.vpc_basenetwork.aws_subnet.subnet_public",
            "module.vpc_basenetwork.aws_vpc.main_vpc",
            "module.vpc_basenetwork.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_basenetwork",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetable_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:route-table/rtb-014a2a98e1b2baa91",
            "id": "rtb-014a2a98e1b2baa91",
            "owner_id": "904546716712",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b793ab4d73de84ca",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table-1",
              "PrivateRouteTable": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Private Route Table-1",
              "PrivateRouteTable": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-073172b04af6e53fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_basenetwork.aws_eip.natgwip",
            "module.vpc_basenetwork.aws_internet_gateway.main_igw",
            "module.vpc_basenetwork.aws_nat_gateway.natgw",
            "module.vpc_basenetwork.aws_subnet.subnet_public",
            "module.vpc_basenetwork.aws_vpc.main_vpc",
            "module.vpc_basenetwork.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:route-table/rtb-0e37d2902d3100484",
            "id": "rtb-0e37d2902d3100484",
            "owner_id": "904546716712",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-021620abe1ea527d2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table-2",
              "PrivateRouteTable": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Private Route Table-2",
              "PrivateRouteTable": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-073172b04af6e53fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_basenetwork.aws_eip.natgwip",
            "module.vpc_basenetwork.aws_internet_gateway.main_igw",
            "module.vpc_basenetwork.aws_nat_gateway.natgw",
            "module.vpc_basenetwork.aws_subnet.subnet_public",
            "module.vpc_basenetwork.aws_vpc.main_vpc",
            "module.vpc_basenetwork.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_basenetwork",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetable_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:route-table/rtb-0ed909a64c8f34542",
            "id": "rtb-0ed909a64c8f34542",
            "owner_id": "904546716712",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a2641caf78696019",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table",
              "PublicRouteTable": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Public Route Table",
              "PublicRouteTable": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-073172b04af6e53fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_basenetwork.aws_internet_gateway.main_igw",
            "module.vpc_basenetwork.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_basenetwork",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetableassociation_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3ae2adf458ba877",
            "route_table_id": "rtb-014a2a98e1b2baa91",
            "subnet_id": "subnet-0bd45851a12c5066c"
          },
          "dependencies": [
            "module.vpc_basenetwork.aws_eip.natgwip",
            "module.vpc_basenetwork.aws_internet_gateway.main_igw",
            "module.vpc_basenetwork.aws_nat_gateway.natgw",
            "module.vpc_basenetwork.aws_route_table.routetable_private",
            "module.vpc_basenetwork.aws_subnet.subnet_private",
            "module.vpc_basenetwork.aws_subnet.subnet_public",
            "module.vpc_basenetwork.aws_vpc.main_vpc",
            "module.vpc_basenetwork.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0632958999dfb5faa",
            "route_table_id": "rtb-0e37d2902d3100484",
            "subnet_id": "subnet-093b237496e4d62ff"
          },
          "dependencies": [
            "module.vpc_basenetwork.aws_eip.natgwip",
            "module.vpc_basenetwork.aws_internet_gateway.main_igw",
            "module.vpc_basenetwork.aws_nat_gateway.natgw",
            "module.vpc_basenetwork.aws_route_table.routetable_private",
            "module.vpc_basenetwork.aws_subnet.subnet_private",
            "module.vpc_basenetwork.aws_subnet.subnet_public",
            "module.vpc_basenetwork.aws_vpc.main_vpc",
            "module.vpc_basenetwork.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_basenetwork",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetableassociation_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d17c384751fa8911",
            "route_table_id": "rtb-0ed909a64c8f34542",
            "subnet_id": "subnet-03da9dccfa8b731f8"
          },
          "dependencies": [
            "module.vpc_basenetwork.aws_internet_gateway.main_igw",
            "module.vpc_basenetwork.aws_route_table.routetable_public",
            "module.vpc_basenetwork.aws_subnet.subnet_public",
            "module.vpc_basenetwork.aws_vpc.main_vpc",
            "module.vpc_basenetwork.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d12b0e889a5ad769",
            "route_table_id": "rtb-0ed909a64c8f34542",
            "subnet_id": "subnet-0424f7f8b25bb6e41"
          },
          "dependencies": [
            "module.vpc_basenetwork.aws_internet_gateway.main_igw",
            "module.vpc_basenetwork.aws_route_table.routetable_public",
            "module.vpc_basenetwork.aws_subnet.subnet_public",
            "module.vpc_basenetwork.aws_vpc.main_vpc",
            "module.vpc_basenetwork.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_basenetwork",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:subnet/subnet-0bd45851a12c5066c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd45851a12c5066c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904546716712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-1",
              "PrivateCIDR": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "PrivateSubnet-1",
              "PrivateCIDR": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "vpc_id": "vpc-073172b04af6e53fc"
          },
          "dependencies": [
            "module.vpc_basenetwork.aws_vpc.main_vpc",
            "module.vpc_basenetwork.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:subnet/subnet-093b237496e4d62ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093b237496e4d62ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904546716712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-2",
              "PrivateCIDR": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "PrivateSubnet-2",
              "PrivateCIDR": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "vpc_id": "vpc-073172b04af6e53fc"
          },
          "dependencies": [
            "module.vpc_basenetwork.aws_vpc.main_vpc",
            "module.vpc_basenetwork.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_basenetwork",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:subnet/subnet-03da9dccfa8b731f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03da9dccfa8b731f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "904546716712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-1",
              "PublicCIDR": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "PublicSubnet-1",
              "PublicCIDR": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "vpc_id": "vpc-073172b04af6e53fc"
          },
          "dependencies": [
            "module.vpc_basenetwork.aws_vpc.main_vpc",
            "module.vpc_basenetwork.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:subnet/subnet-0424f7f8b25bb6e41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0424f7f8b25bb6e41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "904546716712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-2",
              "PublicCIDR": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "PublicSubnet-2",
              "PublicCIDR": "true",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "vpc_id": "vpc-073172b04af6e53fc"
          },
          "dependencies": [
            "module.vpc_basenetwork.aws_vpc.main_vpc",
            "module.vpc_basenetwork.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_basenetwork",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:vpc/vpc-073172b04af6e53fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-05de089b816324bd6",
            "default_route_table_id": "rtb-0f59e9d2a525ce580",
            "default_security_group_id": "sg-0483d63ffaebc8692",
            "dhcp_options_id": "dopt-00bfde5a20a8e8920",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-073172b04af6e53fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f59e9d2a525ce580",
            "owner_id": "904546716712",
            "tags": {
              "Name": "VPC-Curtis-Onboarding",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "VPC-Curtis-Onboarding",
              "environment": "Development",
              "layer": "000Base",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}